<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/_17sdp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/numbers"
        android:paddingHorizontal="@dimen/_7sdp"
        android:paddingVertical="@dimen/_15sdp"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="@dimen/_35ssp"
        android:textStyle="bold"
        android:maxLines="3"
        />
    <TextView
        android:id="@+id/screen2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/numbers"
        android:paddingHorizontal="@dimen/_7sdp"
        android:paddingVertical="@dimen/_15sdp"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="@dimen/_35ssp"
        android:textStyle="bold"
        android:maxLines="3"
        android:visibility="invisible"
        />

    <LinearLayout
        android:id="@+id/numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/on"
                style="@style/button1"
                android:text="@string/on" />

            <Button
                android:id="@+id/num7"
                style="@style/button2"
                android:text="@string/_7" />

            <Button
                android:id="@+id/num4"
                style="@style/button2"
                android:text="@string/_4" />

            <Button
                android:id="@+id/num1"
                style="@style/button2"
                android:text="@string/_1" />

            <Button
                android:id="@+id/del"
                style="@style/button1"
                android:text="@string/del" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/off"
                style="@style/button1"
                android:text="@string/off" />

            <Button
                android:id="@+id/num8"
                style="@style/button2"
                android:text="@string/_8" />

            <Button
                android:id="@+id/num5"
                style="@style/button2"
                android:text="@string/_5" />

            <Button
                android:id="@+id/num2"
                style="@style/button2"
                android:text="@string/_2" />

            <Button
                android:id="@+id/num0"
                style="@style/button2"
                android:text="@string/_0" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/ac"
                style="@style/button1"
                android:text="@string/ac" />

            <Button
                android:id="@+id/num9"
                style="@style/button2"
                android:text="@string/_9" />

            <Button
                android:id="@+id/num6"
                style="@style/button2"
                android:text="@string/_6" />

            <Button
                android:id="@+id/num3"
                style="@style/button2"
                android:text="@string/_3" />

            <Button
                android:id="@+id/point"
                style="@style/button2"
                android:text="@string/point" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/div"
                style="@style/button1"
                android:text="@string/div" />

            <Button
                android:id="@+id/times"
                style="@style/button1"
                android:text="@string/x" />

            <Button
                android:id="@+id/min"
                style="@style/button1"
                android:text="@string/min" />

            <Button
                android:id="@+id/plus"
                style="@style/button1"
                android:text="@string/plus" />

            <Button
                android:id="@+id/equal"
                style="@style/button1"
                android:text="@string/equal" />


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>